--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -32,3 +32,11 @@
   width: 100%;
   height: 30px;
 }
+.rowShow {
+  display: flex;
+  flex-direction: row;
+}
+.colShow {
+  display:flex;
+  flex-direction: column;
+}
